# flexric

./: .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  README.md  blck_lst.txt  compile_commands.json  flexric.conf  rt_slice_stats.json  sqlite3_wrapper.c
examples/proxy_agent/amarisoft/: CMakeLists.txt  ayo_config_get.json  config_get.json  gnb_amari_emu.c  msg_config_set.json  msg_config_set_failure.json  msg_ho.json  msg_ho_failure.json  msg_ue_get.json  package-lock.json  roland_config_get.json  server.js  server2.js
examples/xApp/c/helloworld/: CMakeLists.txt  hw.c
examples/xApp/c/kpm_rc/: CMakeLists.txt  cu_du_gnb_xapp_kpm_rc.c  cu_du_xapp_kpm_rc.c  mono_gnb_xapp_kpm_rc.c  xapp_kpm_rc.c  xapp_kpm_rc_ntust.c
examples/xApp/c/mac/: CMakeLists.txt  xapp_mac_ctrl.c
examples/xApp/c/monitor/: CMakeLists.txt  xapp_all_moni.c  xapp_cust_moni.c  xapp_gtp_mac_rlc_pdcp_moni.c  xapp_gtp_moni.c  xapp_kpm_moni.c  xapp_kpm_moni_infinity.c  xapp_mac_rlc_pdcp_moni.c  xapp_mobi_ctrl.c  xapp_moni.c  xapp_oran_moni.c  xapp_rc_insert.c  xapp_rc_moni.c
examples/xApp/c/slice/: CMakeLists.txt  xapp_slice_moni_ctrl.c
examples/xApp/c/tc/: CMakeLists.txt  xapp_tc_all.c
src/: CMakeLists.txt
src/agent/: CMakeLists.txt  asio_agent.c  asio_agent.h  e2_agent.c  e2_agent.h  e2_agent_api.c  gen_msg_agent.c  gen_msg_agent.h  msg_handler_agent.c  not_handler_agent.c  plugin_agent.c
src/lib/: CMakeLists.txt  async_event.h  correlation_events.h  ind_event.c  ind_event.h  pending_events.h
src/lib/3gpp/ie/: network_interface_msg_id.h  nr_cgi.h  rrc_msg_id.h  s_nssai.c  s_nssai.h
src/lib/amr/: amr_msg.h
src/lib/ap/: CMakeLists.txt  e2ap_ap.h  e2ap_ap_asn.c  type_defs.h
src/lib/ap/dec/: e2ap_msg_dec_asn.c  e2ap_msg_dec_asn.h
src/lib/ap/e2ap_types/: CMakeLists.txt  e2_node_connected.c  e2_setup_request.c  e2_setup_request.h  e2_setup_response.c  e2_setup_response.h  ric_control_ack.c  ric_control_ack.h  ric_service_update_failure.c  ric_service_update_failure.h  ric_subscription_delete_response.c  (+2 more)
src/lib/ep/: e2ap_ep.c  sctp_msg.c  ws_msg.h
src/lib/msg_hand/: reg_e2_nodes.c  reg_e2_nodes.h
src/proxy-agent/: CMakeLists.txt  DESIGN  DESIGN.md  README_ch_stats.md  e2_read_setup_ran.c  e2_read_setup_ran.h  e2_sm_agent.c  e2_sm_agent.h  e2_sm_kpm_agent.c  e2_sm_kpm_agent.h  e2_sm_mac_agent.c  e2_sm_mac_agent.h  e2_sm_rc_agent.c  e2_sm_rc_agent.h  helgrind.supp  io_ran.h  json_ser_ran.c  msg_json_ws.c  msg_json_ws.h  notif_e2_ran.c  notif_e2_ran.h  notif_e2_ws.c  notif_e2_ws.h  proxy_agent.c  proxy_agent.h  proxy_agent_conf.c  proxy_agent_conf.h  ran_if.h  ran_msg_hdlr.c  ran_msg_hdlr.h  ringbuffer.c  ringbuffer.h  ser_ran.h  ws_io_ran.c  ws_io_ran.h  ws_msg_hdlr.c  ws_msg_hdlr.h  ws_ran_if.c  ws_ran_if.h
src/proxy-agent/server/: CMakeLists.txt  json_ser_ran.c  main.c  protocol_lws_minimal.c  ran_msg_hdlr.c  ran_msg_hdlr.h  ser_ran.h
src/proxy_ag/: CMakeLists.txt  main.c
src/proxy_ag/amarisoft/: CMakeLists.txt  asio_agent_amr.c  asio_agent_amr.h  e2_agent_amr.c  e2_agent_amr.h  e2_agent_amr_api.c  e2_agent_amr_api.h  ep_amr.c  ep_amr.h  kpm_msgs_amr.c  kpm_msgs_amr.h  kpm_pend.c  kpm_pend.h  kpm_pend_ds.c  kpm_pend_ds.h  kpm_pend_msg.c  kpm_pend_msg.h  kpm_sm_pend.h  msg_amr.c  msg_amr.h  msg_dec_amr_ag.c  msg_dec_amr_ag.h  msg_handle_amr_ag.c  msg_handle_amr_ag.h  pending_event_proxy.c  pending_event_proxy.h  proxy_ag_amr.c  proxy_ag_amr.h  rc_msgs_amr.c  rc_msgs_amr.h  rc_pend_msg.c  rc_pend_msg.h  send_msg_amr.c  send_msg_amr.h
src/proxy_agent/amarisoft/: CMakeLists.txt  asio_agent_amr.c  ccc_pend_ds.c  ccc_pend_ds.h  ccc_pend_msg.c  ccc_pend_msg.h  e2_agent_amr.c  e2_agent_amr.h  e2_agent_amr_api.c  e2_agent_amr_api.h  kpm_pend_ds.h  kpm_pend_msg.c  kpm_pend_msg.h  msg_handle_amr_ag.c  msg_handle_amr_ag.h  pending_event_proxy.c  pending_event_proxy.h  rc_pend_ds.c  rc_pend_ds.h  rc_pend_msg.h
src/ric/: CMakeLists.txt  asio_ric.c  asio_ric.h  msg_handler_ric.c  near_ric.c  near_ric.h  plugin_ric.c
src/ric/iApp/: asio_iapp.c  e42_iapp.c  e42_iapp.h  e42_iapp_api.c  map_xapps_sockaddr.c  map_xapps_sockaddr.h  msg_handler_iapp.c  msg_handler_iapp.h
src/ric/iApps/: influx.c  redis.c  stdout.c  string_parser.c  string_parser.h
src/sm/: CMakeLists.txt  sm_agent.h
src/sm/ccc_sm/: CMakeLists.txt  README.md  ccc_sm_agent.c  ccc_sm_agent.h  ccc_sm_id.h  ccc_sm_ric.c  ccc_sm_ric.h
src/sm/ccc_sm_v01.01/: CMakeLists.txt
src/sm/gtp_sm/: gtp_sm_agent.c
src/sm/kpm_sm/: kpm_sm_agent.c  kpm_sm_id.h  kpm_sm_ric.c
src/sm/kpm_sm_v03.00/: kpm_sm_agent.c
src/sm/mac_sm/: mac_sm_agent.c  mac_sm_ric.c
src/sm/pdcp_sm/: pdcp_sm_agent.c
src/sm/rc_sm/: rc_sm_agent.c  rc_sm_id.h
src/sm/rlc_sm/: rlc_sm_agent.c
src/sm/rrc_sm/: CMakeLists.txt  rrc_sm_agent.c  rrc_sm_agent.h  rrc_sm_id.h  rrc_sm_ric.c  rrc_sm_ric.h
src/sm/slice_sm/: slice_sm_agent.c  slice_sm_ric.c
src/sm/tc_sm/: tc_sm_agent.c
src/util/: CMakeLists.txt  byte_array.c  byte_array.h  compare.h  conf_file.c  conf_file.h  conversions.c  e2ap_ngran_type.c  e2ap_ngran_types.h
src/util/go_utils/: CMakeLists.txt
src/xApp/: CMakeLists.txt  act_proc.h  e42_xapp.c  e42_xapp.h  e42_xapp_api.c  e42_xapp_api.h  msg_dispatcher_xapp.c  msg_dispatcher_xapp.h  msg_generator_xapp.c  msg_handler_xapp.c  msg_handler_xapp.h  pending_event_xapp.c  pending_event_xapp.h  plugin_agent.c  sm_ran_function_def.c  sm_ran_function_def.h
src/xApp/db/: CMakeLists.txt  db.c  db.h  db_generic.h  db_params.c  db_params.h
src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h  swig_wrapper.i
test/agent-ric-xapp/: CMakeLists.txt  test_ag_ric_xapp.c
test/proxy_ag/: CMakeLists.txt  config_get.c  message_stats.json  msg_stats.c  msg_ue_get.c  msg_ue_get.json  roland_config_get.json
test/proxy_agent/: CMakeLists.txt  config_get.2023.02.27.json  config_get.c  config_get.json  msg_stats.c  msg_stats.json  msg_ue_get.c  msg_ue_get.json  stats.json  tst-msg_json_ws.c  tst-perf_json_ws.c  ue_get.json
test/sm/ccc_sm/: CMakeLists.txt  main.c
test/sm/kpm_sm/: CMakeLists.txt  main.c
test/utils/: CMakeLists.txt  tst-bimap.c
(+2809 files in other folders)
